--- a/css/styles.css
+++ b/css/styles.css
@@ -305,7 +305,7 @@ body {
 
 .header {
   height: 95vh;
-  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("/assets/travel.jpg");
+  background-image: linear-gradient(to right bottom, rgba(126, 213, 111, 0.8), rgba(40, 180, 133, 0.8)), url("https://mortiff75.github.io/nature/assets/travel.jpg");
   background-size: cover;
   background-position: center;
   position: relative;
@@ -454,15 +454,15 @@ body {
   -webkit-clip-path: polygon(100% 0, 0 0, 0 100%, 100% 85%);
 }
 .card__picture--1 {
-  background: url(../../assets/f1.jpg), linear-gradient(to right bottom, #ffb900, #ff7730) center;
+  background: url("https://mortiff75.github.io/nature/assets/f1.jpg"), linear-gradient(to right bottom, #ffb900, #ff7730) center;
   background-size: cover;
 }
 .card__picture--2 {
-  background: url(../../assets/f2.jpg), linear-gradient(to right bottom, #55c57a, #28b485), center;
+  background: url("https://mortiff75.github.io/nature/assets/f2.jpg"), linear-gradient(to right bottom, #55c57a, #28b485), center;
   background-size: cover;
 }
 .card__picture--3 {
-  background: url(../../assets/p2.jpg), linear-gradient(to right bottom, #2998ff, #5643fa), center;
+  background: url("https://mortiff75.github.io/nature/assets/p2.jpg"), linear-gradient(to right bottom, #2998ff, #5643fa), center;
   background-size: cover;
 }
 .card__heading {
@@ -933,7 +933,7 @@ body {
   display: flex;
   flex-direction: row;
   align-items: center;
-  background: linear-gradient(to right bottom, rgba(85, 197, 122, 0.8), rgba(40, 180, 133, 0.8)), url("/assets/t2.jpg") center;
+  background: linear-gradient(to right bottom, rgba(85, 197, 122, 0.8), rgba(40, 180, 133, 0.8)), url("https://mortiff75.github.io/nature/assets/t2.jpg") center;
   object-fit: cover;
   clip-path: polygon(100% 0, 0 10%, 0 100%, 100% 90%);
   transform: skewY(-7deg);
@@ -961,7 +961,7 @@ body {
 }
 
 .book {
-  background: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url("../../assets/travel.jpg") no-repeat;
+  background: linear-gradient(105deg, rgba(255, 255, 255, 0.9) 50%, transparent 50%), url("https://mortiff75.github.io/nature/assets/travel.jpg") no-repeat;
   background-size: cover;
   width: 80%;
   height: 50rem;
